--- a/lib/graphite/resources/assets/graphite.css
+++ b/lib/graphite/resources/assets/graphite.css
@@ -4,15 +4,15 @@
  * -------------------------------------------------------------------------
  */
 
-html {
-    font-size: 100%;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    box-sizing: border-box;
-}
-
 *, *:before, *:after {
     box-sizing: inherit;
+}
+
+html {
+    box-sizing: border-box;
+    font-size: 100%;
+    -webkit-text-size-adjust: none;
+            text-size-adjust: none;
 }
 
 body {
@@ -46,44 +46,64 @@ img {
 body {
     font-size: 17px;
     color: black;
-    font-family: 'Crimson Text', serif;
+    font-family: 'Crimson Text', Georgia, serif;
     line-height: 1.75;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1 {
     padding: 0;
-    margin: 60px 0 30px;
+    margin: 80px 0 30px;
     line-height: 1.25;
     text-align: center;
-}
-
-h1 {
     font-size: 32px;
     font-weight: normal;
 }
 
 h2 {
+    padding: 0;
+    margin: 80px 0 30px;
+    line-height: 1.25;
+    text-align: center;
     font-size: 22px;
     font-weight: bold;
 }
 
+h2.underline {
+    padding: 0;
+    margin: 80px 0 35px;
+    line-height: 1.25;
+    text-align: left;
+    font-size: 22px;
+    font-weight: bold;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #ccc;
+}
+
 h3, h4, h5, h6 {
+    padding: 0;
+    margin: 80px 0 30px;
+    line-height: 1.25;
+    text-align: left;
     font-size: 19px;
     font-weight: bold;
-    text-align: left;
 }
 
 p {
     margin: 25px 0;
     padding: 0;
+    overflow-wrap: break-word;
 }
-
 
 blockquote {
     margin: 40px 0px;
     padding: 0 20px;
     border-left: 3px solid #ddd;
     font-style: italic;
+}
+
+.blockquote-caption {
+    margin: -10px 20px 40px;
+    text-align: right;
 }
 
 abbr[title] {
@@ -100,19 +120,11 @@ sup, sub {
 
 sup {
     bottom: 1.5ex;
-    padding: 0 .75ex;
+    padding: 0 0.5ex;
 }
 
 sub {
     top: .5ex;
-}
-
-small {
-    font-size: 75%;
-}
-
-big {
-    font-size: 125%;
 }
 
 /**
@@ -141,6 +153,10 @@ pre {
     background-color: #f8f8f8;
     overflow: auto;
     line-height: 1.4;
+}
+
+h1 code {
+    font-size: 28px;
 }
 
 /**
@@ -189,9 +205,6 @@ a {
     border-bottom: 1px solid;
 }
 
-a:hover {
-}
-
 sup a {
     border-bottom: none;
 }
@@ -205,7 +218,7 @@ hr {
     height: 1px;
     border: 0;
     border-top: 1px solid;
-    margin: 50px auto;
+    margin: 60px auto;
     padding: 0;
     max-width: 300px;
 }
@@ -235,7 +248,7 @@ body {
 
 .main {
     width: 600px;
-    padding: 32px 50px 20px 50px;
+    padding: 32px 50px 40px 50px;
     margin-left: 360px;
     border-left: 3px solid black;
     min-height: calc(100vh - 80px);
@@ -261,6 +274,11 @@ body {
 }
 
 .masthead .tagline {
+    font-style: italic;
+    text-align: right;
+}
+
+.masthead .version {
     font-style: italic;
     text-align: right;
 }
@@ -303,62 +321,117 @@ body {
     margin-bottom: 40px;
 }
 
-.main .subtitle {
+.main .title .subtitle {
     font-style: italic;
     text-align: center;
 }
 
+.main .title hr {
+    margin: 50px auto 60px;
+}
+
+.main > :last-child {
+    margin-bottom: 0;
+}
+
 /**
- * Alert Boxes
+ * Info Boxes
  */
 
-.alertbox {
+.infobox, .alertbox {
     margin: 40px 20px;
     border: 1px solid;
     padding: 0 25px;
     border-radius: 3px;
+    border-color: #bbb;
+    background-color: #f8f8f8;
 }
 
-.alertbox.info {
+.infobox.blue, .alertbox.info {
     border-color: #bac6d3;
     background-color: #e2eef9;
 }
 
-.alertbox.warning {
+.infobox.yellow, .alertbox.warning {
     border-color: #dfd8c2;
     background-color: #fff9ea;
 }
 
-.alertbox.error {
+.infobox.red, .alertbox.error {
     border-color: #d2b2b2;
     background-color: #fcdede;
+}
+
+.infobox.green, .alertbox.success {
+    border-color: #B2C2AB;
+    background-color: #DEF2D6;
 }
 
 /**
  * Footnotes
  */
 
-.footnote-index {
-    display: table-cell;
-    width: 30px;
-}
+ .footnote a::before {
+     content: "[";
+ }
 
-.footnote-body {
-    display: table-cell;
-}
+ .footnote a::after {
+     content: "]";
+ }
 
-.footnote-body :first-child {
-    margin-top: 0;
-}
+ .footnote a {
+     border: none;
+ }
+
+ .footnotes dt {
+     display: table-cell;
+     width: 30px;
+     text-align: right;
+     font-weight: normal;
+ }
+
+ .footnotes dt a {
+     padding: 0;
+     border: none;
+ }
+
+ .footnotes dt a::before {
+     content: "[";
+ }
+
+ .footnotes dt a::after {
+     content: "]";
+ }
+
+ .footnotes dd {
+     display: table-cell;
+     padding-left: 20px;
+     padding-right: 0px;
+     border: none
+ }
+
+ .footnotes dd :first-child {
+     margin-top: 0;
+ }
+
+ .footnotes div:last-child dd :last-child {
+     margin-bottom: 0;
+ }
+
+ .footnotes pre {
+     margin: 30px 0;
+ }
 
 /**
  * Tables
  */
 
 table {
+    font-size: 16px;
     border-collapse: collapse;
     border-spacing: 0;
-    margin: 40px 0px;
+    margin: 50px 0px;
+    width: 100%;
 }
 
 thead, tfoot {
@@ -419,42 +492,26 @@ th, td {
  * -------------------------------------------------------------------------
  *  Media Queries
  * -------------------------------------------------------------------------
- *
- * The @viewport tag does the same thing as
- *
- *   <meta name="viewport" content="width=device-width">
- *
- * but in the future W3C standard way. The -ms- prefix is required for
- * IE10+ to render responsive styling in Windows 8 "snapped" views;
- * IE10+ does not honour the meta tag.
  */
 
-@-ms-viewport {
-    width: device-width;
-}
-
-@viewport {
-    width: device-width;
-}
-
-/**
- * Tablet screens and smaller.
- */
+/* Tablet screens and smaller. */
 
 @media screen and (max-width: 960px) {
 
     body {
         width: auto;
-        max-width: 600px;
+        max-width: 680px;
+        padding-top: 60px;
     }
 
     .masthead {
         width: auto;
         float: none;
-        padding: 20px 20px 60px 20px;
+        padding: 60px 20px 60px 20px;
         text-align: center;
         margin-left: 40px;
         margin-right: 40px;
+        border-top: 3px solid black;
         border-bottom: 3px solid black;
     }
 
@@ -472,11 +529,18 @@ th, td {
 
     .masthead .tagline {
         text-align: center;
+        max-width: 450px;
+        margin-left: auto;
+        margin-right: auto;
         display: none;
     }
 
     .homepage .masthead .tagline {
         display: block;
+    }
+
+    .masthead .version {
+        text-align: center;
     }
 
     .masthead .menu {
@@ -577,21 +641,18 @@ th, td {
     }
 }
 
-/**
- * Landscape phone screens and smaller.
- */
+/* Landscape phone screens and smaller. */
 
 @media screen and (max-width: 720px) {
 }
 
-/**
- * Portrait phone screens.
- */
+/* Portrait phone screens. */
 
 @media screen and (max-width: 480px) {
 
     body {
         font-size: 16px;
+        padding-top: 40px;
     }
 
     h1 {
@@ -608,10 +669,6 @@ th, td {
 
     pre, code {
         font-size: 12px;
-    }
-
-    .masthead {
-        padding-top: 0;
     }
 
     .small {
