--- a/lib/graphite/resources/assets/graphitee.css
+++ b/lib/graphite/resources/assets/graphitee.css
@@ -143,6 +143,8 @@ code {
     border: 1px solid #e8e8e8;
     border-radius: 3px;
     background-color: #f8f8f8;
+    display: flex;
+    overflow-x: auto;
 }
 
 pre {
